Menu section has completed

--- a/index.html
+++ b/index.html
@@ -435,50 +435,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card shadow mt-4 recipe-card">
-                        <img class="card-img-top recipe-img" src="./assets/img/recipes/beetroot-fry.jpg"
-                            alt="Card image cap">
-                        <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Beet Root Fry</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card shadow mt-4 recipe-card">
-                        <img class="card-img-top recipe-img" src="./assets/img/recipes/beetroot-fry.jpg"
-                            alt="Card image cap">
-                        <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Beet Root Fry</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card shadow mt-4 recipe-card">
-                        <img class="card-img-top recipe-img" src="./assets/img/recipes/beetroot-fry.jpg"
-                            alt="Card image cap">
-                        <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Beet Root Fry</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4 col-lg-3">
-                    <div class="card shadow mt-4 recipe-card">
-                        <img class="card-img-top recipe-img" src="./assets/img/recipes/beetroot-fry.jpg"
-                            alt="Card image cap">
-                        <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Beet Root Fry</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
 
 
@@ -491,10 +447,55 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="card shadow mt-4 recipe-card">
+                        <img class="card-img-top recipe-img" src="./assets/img/recipes/chicken-curry.jpg"
+                            alt="Card image cap">
+                        <div class="card-body text-center">
+                            <h5 class="bg-warning py-2 text-white">Chicken Curry</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="card shadow mt-4 recipe-card">
+                        <img class="card-img-top recipe-img" src="./assets/img/recipes/chicken-fry.jpg"
+                            alt="Card image cap">
+                        <div class="card-body text-center">
+                            <h5 class="bg-warning py-2 text-white">Chicken Fry</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="card shadow mt-4 recipe-card">
+                        <img class="card-img-top recipe-img" src="./assets/img/recipes/fish-curry.jpg"
+                            alt="Card image cap">
+                        <div class="card-body text-center">
+                            <h5 class="bg-warning py-2 text-white">Fish Curry</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="card shadow mt-4 recipe-card">
+                        <img class="card-img-top recipe-img" src="./assets/img/recipes/fish-fry.jpg"
+                            alt="Card image cap">
+                        <div class="card-body text-center">
+                            <h5 class="bg-warning py-2 text-white">Fish Fry</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </section>
-
-
     <!-- Menu ends -->
 
 
