small changes have been done on menu section

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </section>
 
     <!-- Menu starts -->
-    <section id="menu">
+    <section id="menu" class="pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -311,7 +311,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/beetroot-fry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Beet Root Fry</h5>
+                            <h5 class="py-2 text-white">Beet Root Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -322,7 +322,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/carrot-fry.jpg"
                             alt=" Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Carrot Fry</h5>
+                            <h5 class="py-2 text-white">Carrot Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -333,7 +333,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/potato-fry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Potato Fry</h5>
+                            <h5 class="py-2 text-white">Potato Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -344,7 +344,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/palak-paneer.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Palak Paneer</h5>
+                            <h5 class="py-2 text-white">Palak Paneer</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -355,7 +355,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/mushroom-curry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Mushroom Curry</h5>
+                            <h5 class="py-2 text-white">Mushroom Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -366,7 +366,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/egg-curry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Egg Curry</h5>
+                            <h5 class="py-2 text-white">Egg Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -377,7 +377,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/brinjal-1.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Brinjal Curry</h5>
+                            <h5 class="py-2 text-white">Brinjal Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -388,7 +388,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/brinjal-2.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Brinjal Fry</h5>
+                            <h5 class="py-2 text-white">Brinjal Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -398,7 +398,7 @@
                     <div class="card shadow mt-4 recipe-card">
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/bhindi.jpg" alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Bhindi Fry</h5>
+                            <h5 class="py-2 text-white">Bhindi Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -408,7 +408,7 @@
                     <div class="card shadow mt-4 recipe-card">
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/dal.jpg" alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Tomato Dal</h5>
+                            <h5 class="py-2 text-white">Tomato Dal</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -419,7 +419,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/tomato-curry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Tomato Curry</h5>
+                            <h5 class="py-2 text-white">Tomato Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -429,7 +429,7 @@
                     <div class="card shadow mt-4 recipe-card">
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/sambar.jpg" alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Sambar</h5>
+                            <h5 class="py-2 text-white">Sambar</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -453,7 +453,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/chicken-curry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Chicken Curry</h5>
+                            <h5 class="py-2 text-white">Chicken Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -464,7 +464,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/chicken-fry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Chicken Fry</h5>
+                            <h5 class="py-2 text-white">Chicken Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -475,7 +475,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/fish-curry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Fish Curry</h5>
+                            <h5 class="py-2 text-white">Fish Curry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -486,7 +486,7 @@
                         <img class="card-img-top recipe-img" src="./assets/img/recipes/fish-fry.jpg"
                             alt="Card image cap">
                         <div class="card-body text-center">
-                            <h5 class="bg-warning py-2 text-white">Fish Fry</h5>
+                            <h5 class="py-2 text-white">Fish Fry</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
                         </div>
@@ -498,7 +498,42 @@
     </section>
     <!-- Menu ends -->
 
+    <!-- Contact us starts -->
+    <section id="contact" class="pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="headings">
+                        <h1 class="main-heading">Contact Us</h1>
+                        <i class="fab fa-pagelines"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <p>Let us know your opinion on our food. We may not perfect but "we can"... with your feedback.</p>
+                    <form action="">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Your Name">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="10" placeholder="Message"></textarea>
+                        </div>
+                        <button type="submit" class="submit-btn">SEND</button>
+                    </form>
+                </div>
+                <div class="col-sm-12 col-lg-6">
 
+                </div>
+
+            </div>
+        </div>
+        </div>
+    </section>
+    <!-- Contact us ends -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
