--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPz8kKpht12u99ABiaQgoAP7bQ6Ck2iAM&callback=initMap&libraries=&v=weekly"
+        defer></script>
     <script src="https://kit.fontawesome.com/501603e8eb.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -512,21 +516,22 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <p>Let us know your opinion on our food. We may not perfect but "we can"... with your feedback.</p>
-                    <form action="">
+                    <form id="contact-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name">
+                            <input type="text" class="form-control" placeholder="Your Name" name="entry.2038671226">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Email">
+                            <input type="text" class="form-control" placeholder="Email" name="entry.1060296991">
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" rows="10" placeholder="Message"></textarea>
+                            <textarea class="form-control" rows="10" placeholder="Message"
+                                name="entry.1256187746"></textarea>
                         </div>
                         <button type="submit" class="submit-btn">SEND</button>
                     </form>
                 </div>
-                <div class="col-sm-12 col-lg-6">
-
+                <div class="col-sm-12 col-lg-6 py-3">
+                    <div id="map"></div>
                 </div>
 
             </div>
@@ -534,10 +539,7 @@
         </div>
     </section>
     <!-- Contact us ends -->
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -546,7 +548,21 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="main.js"></script>
-
+    <script>
+        // maps
+        let map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: 17.48597949616065, lng: 78.3561614558975 },
+                zoom: 15,
+            });
+            // add marker
+            let marker = new google.maps.Marker({
+                position: { lat: 17.48597949616065, lng: 78.3561614558975 },
+                map: map
+            })
+        }
+    </script>
 </body>
 
 </html>
