--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 col-lg-6">
+                <div class="col-md-12 col-lg-6">
                     <p>Let us know your opinion on our food. We may not perfect but "we can"... with your feedback.</p>
                     <form id="contact-form">
                         <div class="form-group">
@@ -530,7 +530,7 @@
                         <button type="submit" class="submit-btn">SEND</button>
                     </form>
                 </div>
-                <div class="col-sm-12 col-lg-6 py-3">
+                <div class="col-md-12 col-lg-6 py-3">
                     <div id="map"></div>
                 </div>
 
@@ -539,7 +539,8 @@
         </div>
     </section>
     <!-- Contact us ends -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
