--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPz8kKpht12u99ABiaQgoAP7bQ6Ck2iAM&callback=initMap&libraries=&v=weekly"
         defer></script>
-    <script src="https://kit.fontawesome.com/501603e8eb.js" crossorigin="anonymous"></script>
+      <script src="https://kit.fontawesome.com/0d5133f2af.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#myNav">
     <!-- Audio -->
     <audio id="owlAudio" src="./assets/owl.mp3"></audio>
 
@@ -32,7 +32,7 @@
     <section id="home" style="padding-top: 96px;">
         <!-- Header Section -->
         <header>
-            <nav class="navbar navbar-expand-md navbar-dark shadow fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark shadow fixed-top" id="myNav">
                 <a href="#" class="navbar-brand">
                     <img src="./assets/img/hungry-owl.png" height="70px" width="200px">
                 </a>
