--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="myMenu">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item cool-link"><a href="#home" class="nav-link activate">Home</a></li>
+                        <li class="nav-item cool-link"><a href="#home" class="nav-link active">Home</a></li>
                         <li class="nav-item cool-link"><a href="#about" class="nav-link">About</a></li>
                         <li class="nav-item cool-link"><a href="#menu" class="nav-link">Menu</a></li>
                         <li class="nav-item cool-link"><a href="#contact" class="nav-link">Contact</a></li>
